panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_declaration_in_typeof_is_not_ignored.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_declaration_in_typeof_is_not_ignored.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_declaration_in_typeof_is_not_ignored.c"
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition x~3 `struct T~0 complete`
            (braced
               (subobject +0 (42 `int`))))
         (return
            (member `int` x +0
               (x~3 `struct T~0 complete`))))))

----- stderr -----
