panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_incomplete_struct_not_completed_in_different_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid application of `sizeof` to incomplete type `struct T~0`
   ╭─[panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope.c:9:5]
   │
 9 │     sizeof *ptr;
   │     ─────┬─────  
   │          ╰─────── in this expression
───╯

Error: dereference of pointer to incomplete type `struct T~0`
   ╭─[panko/tests/cases/execute/struct/test_incomplete_struct_not_completed_in_different_scope.c:9:13]
   │
 9 │     sizeof *ptr;
   │             ─┬─  
   │              ╰─── this expression has type `ptr<struct T~0>`
───╯
